--- a/src/layouts/Sidebar.module.css
+++ b/src/layouts/Sidebar.module.css
@@ -26,11 +26,15 @@
 
 @media screen and (max-width: 600px) {
   .sidebar {
-    height: 7.5rem;
+    height: 6.5rem;
     width: 100vw;
     top: initial;
     bottom: 0;
     z-index: 10;
     padding: 0;
+  }
+
+  .side-nav__link {
+    padding-top: 0;
   }
 }
